bug 1 and bug 2 are fixed